--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-
+		<dependency>
+		    <groupId>fgh.sp</groupId>
+		    <artifactId>sp-changedrecordsdetector</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
